@@ -21,9 +21,16 @@ class BookModelAdmin(ModelAdmin):
     menu_order = 300
     list_display = ('title', 'author')
     list_filter = ('author', )
+    ordering = ('title', )
     search_fields = ('title', )
     inspect_view_enabled = True
     inspect_view_fields_exclude = ('title', )
+
+    def get_extra_attrs_for_row(self, obj, context):
+        return {
+            'data-author-yob': obj.author.date_of_birth.year,
+            'class': 'book',
+        }
 
 
 class TokenModelAdmin(ModelAdmin):
